# shamir

./: .editorconfig  .gitlab-ci.yml  .travis.yml  Cargo.toml  LICENSE  README.md
examples/: basic.rs
src/: gf256.rs  lib.rs
