[package]
name = "shamir"
version = "1.0.3"
authors = ["Chris MacNaughton <chmacnaughton@gmail.com>"]
description = "Shamir is a pure Rust implementation of Shamir's secret sharing"
homepage = "https://github.com/Nebulosus/shamir"
repository = "https://github.com/Nebulosus/shamir.git"
license = "MIT"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { path = "../../sgx_tstd" }
sgx_rand = { path = "../../sgx_rand" }

[target.'cfg(target_env = "sgx")'.dependencies]
rand = "0.3"
